deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home
  labels: 
    apps: home
spec:
  selector :
    matchLabels:
      apps: home
  template:
    metadata:
      name: home
      labels:
        apps: home
    spec:
      containers:
      - name: myhttpd
        image: httpd
        ports:
        - containerPorts: 80
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: home2
  labels: 
    apps: home2
spec:
  selector :
    matchLabels:
      apps: home2
  template:
    metadata:
      name: home2
      labels:
        apps: home2
    spec:
        containers:
        - name: home2
          image: nginx
          ports:
          - containerPorts: 80
