service.yml
apiVersion: v1
kind: Service
metadata:
  name: my-svc
  labels: 
    apps: my-app-home-svc
spec:
  selector:
    app: myappmy-app-home-svc
  ports:
  - port: 80
    name: httpd
    targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: my-svc-2
  labels: 
    apps: my-app-home2-svc2
spec:
  type: NodePort
  selector:
    app: myappmy-app-home2-svc2
  ports:
  - port: 80
    name: nginx
    targetPort: 80
